[gd_scene load_steps=15 format=3 uid="uid://dfxrgpbx000de"]

[ext_resource type="Script" uid="uid://puvllg6kifdy" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dus01hhunb1nf" path="res://expression.gd" id="2_7mycd"]
[ext_resource type="StyleBox" uid="uid://b4ft1tecblwx8" path="res://container.tres" id="2_kek77"]
[ext_resource type="Script" uid="uid://clsanyekn3n2p" path="res://answer.gd" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://d1fhsc7ylw252" path="res://container.gd" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://7h5qan4frtki" path="res://operation_tile.tscn" id="5_7mycd"]
[ext_resource type="Script" uid="uid://n5i5lbtymgc2" path="res://operation_container.gd" id="7_272bh"]
[ext_resource type="Script" uid="uid://c4vtgard6oa1c" path="res://target.gd" id="8_kek77"]
[ext_resource type="Texture2D" uid="uid://jxvtmrebsnsq" path="res://hard_mode.svg" id="10_4c57u"]
[ext_resource type="Script" uid="uid://dia6rgk03nafl" path="res://difficulty.gd" id="11_efxa6"]
[ext_resource type="Texture2D" uid="uid://c77mg5ec72pdb" path="res://help_button.svg" id="12_dg77c"]
[ext_resource type="Script" uid="uid://21v6vcrj2xa2" path="res://help.gd" id="13_ycdy4"]
[ext_resource type="PackedScene" uid="uid://ca7v6j8yska1v" path="res://help_menu.tscn" id="14_w48qg"]

[sub_resource type="Theme" id="Theme_ig7tw"]
background/colors/color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_ig7tw")
script = ExtResource("1_h2yge")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"background"
color = Color(0.0705882, 0.0705882, 0.0705882, 1)
metadata/_edit_lock_ = true

[node name="Date" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 17
text = "If you are seeing this text in-game then you are witnessing a bug.
Make a report on the GitHub."
horizontal_alignment = 1

[node name="Equation" type="HBoxContainer" parent="."]
process_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Expression" type="PanelContainer" parent="Equation"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_kek77")

[node name="Symbols" type="HBoxContainer" parent="Equation/Expression"]
modulate = Color(2, 2, 2, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"box"
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("2_7mycd")
allowed_tiles = Array[int]([0, 1, 2])
container_type = 2

[node name="Label" type="RichTextLabel" parent="Equation/Expression"]
layout_mode = 2
mouse_filter = 2
text = "Expression"
horizontal_alignment = 1
vertical_alignment = 1

[node name="equals" parent="Equation" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = "="
type = 3

[node name="Answer" type="PanelContainer" parent="Equation"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_kek77")

[node name="Symbols" type="HBoxContainer" parent="Equation/Answer"]
modulate = Color(2, 2, 2, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"box"
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("3_1bvp3")
max_size = 1
allowed_tiles = Array[int]([2, 0])
container_type = 3

[node name="Label" type="RichTextLabel" parent="Equation/Answer"]
layout_mode = 2
mouse_filter = 2
text = "Answer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Storage" type="PanelContainer" parent="."]
process_mode = 1
custom_minimum_size = Vector2(110, 110)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -55.0
offset_right = 55.0
offset_bottom = 110.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_kek77")

[node name="Symbols" type="HBoxContainer" parent="Storage"]
modulate = Color(2, 2, 2, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"box"
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("4_1bvp3")
allowed_tiles = Array[int]([2, 0])
container_type = 1

[node name="Operations" type="PanelContainer" parent="."]
process_mode = 1
custom_minimum_size = Vector2(660, 110)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -55.0
offset_top = -110.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_kek77")

[node name="Symbols" type="HBoxContainer" parent="Operations"]
modulate = Color(2, 2, 2, 1)
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"box"
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("7_272bh")
max_size = 6
allowed_tiles = Array[int]([2, 1])

[node name="Plus" parent="Operations/Symbols" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = "+"
draggable = true
type = 1

[node name="Minus" parent="Operations/Symbols" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = "-"
draggable = true
type = 1

[node name="Multiply" parent="Operations/Symbols" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = "ร"
draggable = true
type = 1

[node name="Divide" parent="Operations/Symbols" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = "รท"
draggable = true
type = 1

[node name="Open Paren" parent="Operations/Symbols" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = "("
draggable = true
type = 1

[node name="Close Paren" parent="Operations/Symbols" instance=ExtResource("5_7mycd")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
operation = ")"
draggable = true
type = 1

[node name="Target" type="PanelContainer" parent="."]
process_mode = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.1
offset_left = -110.0
offset_top = -55.0
offset_bottom = 55.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_kek77")
script = ExtResource("8_kek77")

[node name="Symbols" type="HBoxContainer" parent="Target"]
modulate = Color(2, 2, 2, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"box"
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("4_1bvp3")
max_size = 1
allowed_tiles = Array[int]([0, 1, 2])
container_type = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Difficulty" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Hard Mode"
icon = ExtResource("10_4c57u")
script = ExtResource("11_efxa6")

[node name="Help" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("12_dg77c")
script = ExtResource("13_ycdy4")

[node name="HelpMenu" parent="VBoxContainer/Help" instance=ExtResource("14_w48qg")]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -54.0
offset_top = 30.0
offset_right = 272.0
offset_bottom = 347.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="VBoxContainer/Difficulty" to="VBoxContainer/Difficulty" method="_on_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Help" to="VBoxContainer/Help" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Help" to="VBoxContainer/Help" method="_on_mouse_exited"]
